Bug 453964 - Can't prevent system clipboard from being written, even if using blackhole register, when deleting text in Kate Vi mode
Summary: Can't prevent system clipboard from being written, even if using blackhole re...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: Vi Input Mode (other bugs)
Version First Reported In: 22.04.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-18 02:13 UTC by red_Arti
Modified: 2022-08-07 15:12 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description red_Arti 2022-05-18 02:13:25 UTC
STEPS TO REPRODUCE
1. Use `x`, `d`, `dd`, `c`, `s` , `delete` keys to delete texts
2. You can try adding `"_`, `"*` before above command

OBSERVED RESULT
Deleted texts always go into system clipboard

EXPECTED RESULT
Don't write to system clipboard when not supposed to

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: kded-5.76.0
(available in About System)
KDE Plasma Version: 5.18.6
KDE Frameworks Version: 5.76.0
Qt Version: 5.12.7

ADDITIONAL INFORMATION
More details at https://www.reddit.com/r/kde/comments/upyuci
Comment 1 red_Arti 2022-05-18 02:14:53 UTC
STEPS TO REPRODUCE
1. Use `x`, `d`, `dd`, `c`, `s` , `delete` keys to delete texts
2. You can try adding `"_`, `"*` before above command

OBSERVED RESULT
Deleted texts always go into system clipboard

EXPECTED RESULT
Don't write to system clipboard when not supposed to

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: kded-5.76.0
(available in About System)
KDE Plasma Version: 5.18.6
KDE Frameworks Version: 5.76.0
Qt Version: 5.12.7

ADDITIONAL INFORMATION
More details at https://www.reddit.com/r/kde/comments/upyuci
Comment 2 Bug Janitor Service 2022-08-05 17:21:59 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/396
Comment 3 Christoph Cullmann 2022-08-07 15:12:28 UTC
Git commit 25b4cdff7577c137086351fe44e83b8ee99721b6 by Christoph Cullmann, on behalf of Helga Albert-Huszár.
Committed on 07/08/2022 at 15:03.
Pushed by cullmann into branch 'master'.

Fix vi mode delete behavior

Deleting text using the black hole register resulted in the text being
copied to the numbered registers and the clipboard.

M  +4    -4    src/vimode/modes/modebase.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/25b4cdff7577c137086351fe44e83b8ee99721b6