Fix vi mode delete behavior

Deleting text using the black hole register resulted in the text being
copied to the numbered registers and the clipboard.

BUG: 453964